--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
 body {
-    width: 1600px;
+        width: 1600px;
+        
+        height:1600px;
 }
+div {
+    width:1600px;
+    margin:680px;
+    
+    
+}
+
+
+
