--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ footer {
 }
 
 p {
-   font-size: 16pt;
+   font-size: 16px;
    font-style: normal;
    font-family: 'Helvetica Neue', sans-serif;
    position: relative;
@@ -113,54 +113,54 @@ h4 {
 .Feature1 {
    margin-top: -200px;
    margin-right: 1040px;
-   margin-left: -100px;
+   margin-left: 0px;
 }
 
 .Feature2 {
-   margin-top: -120px;
+   margin-top: -100px;
    margin-left: 750px;
-   margin-right: 200px;
+   margin-right: 300px;
 }
 
 .Feature3 {
    margin-top: 100px;
    margin-right: 1040px;
-   margin-left: -100px;
+   margin-left: 0px;
 }
 
 .Feature4 {
-   margin-top: -130px;
-   margin-right: 200px;
+   margin-top: -80px;
+   margin-right: 300px;
    margin-left: 750px;
 }
 
 .Getapp {
-   margin-top: 200px;
-   margin-left: -160px;
+   margin-top: 300px;
+   margin-left: -60px;
    margin-right: 860px;
 }
 
 .Apple {
-   margin-left: 120px;
+   margin-left: 220px;
 }
 
 .Android {
-   margin-left: 200px;
+   margin-left: 300px;
    margin-top: -70px;
 }
 
 .Windows {
-   margin-left: 280px;
+   margin-left: 380px;
    margin-top: -70px;
 }
 
 .Cursor2 {
-    margin-left: 315px;
+    margin-left: 420px;
     margin-top: -30px;
 }
 
 .Video {
-    margin-top: -240px;
+    margin-top: -200px;
     margin-left: 860px;
 }
 
@@ -176,11 +176,23 @@ h4 {
 }
 
 .Fourth {
-    margin-left: 280px;
+    margin-left: 400px;
 }
 
 .name {
-    margin-left: 340px;
+    margin-left: 460px;
     font-weight: bold;    
+}
+
+.person {
+    margin-left: 915px;
+   margin-top: -240px;
+   margin-bottom: 100px;
+}
+
+.cursor3 {
+    margin-top: -140px;
+    margin-left: 925px;
+    margin-bottom: 100px;
 }
 
